--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -1,20 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'newsToday' %}">The Moringa Tribune</a>
-            </div>
-        </div>
+{% block content %}
+<div class="navbar fixed-top">
+    <nav class="container">
+        <span class="navbar-brand mb-0 h1">
+          <a href="/">
+              <div id="brand" class="instaicon logo d-none d-sm-block"></div>
+              <div class="instaicon mainicon d-block d-sm-none"></div>
+          </a>
+      </span>
+        <form class="mb-0 h1 ml-auto mr-auto" id="searchform">
+            <input name="search" autocomplete="off" id="searching" class="form-control d-none d-md-block" placeholder=" &#xF002; Search">
+            <i class="spinner "></i>
+        </form>
+        <span class="pull-right">
+            <div class="instaicon disc"></div>
+            <div class="instaicon like"></div>
+            <a href="{% url 'myaccount' %}" class="instaicon pers"></a>
+        </span>
     </nav>
-</body>
-
-</html>
+</div>
+{%endblock%}
