--- a/gram/templates/landing.html
+++ b/gram/templates/landing.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load bootstrap4 %} {% load utils %} {% block content %}
+{% extends 'base.html' %} {% load bootstrap4 %} {% block content %}
 <div class="row">
     <div id="images" class="col-md-8 col-12">
         <form action="/" method="post" enctype="multipart/form-data" class="card form-inline">
